<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_item1"
        android:icon="@drawable/home_fragment_icon"
        android:title="@string/home_fragment_name" />
    <item
        android:id="@+id/bottom_nav_item2"
        android:icon="@drawable/proposal_fragment_icon"
        android:title="@string/proposal_fragment_name" />

    <!--position for center icon, must set the item title to empty-->
    <item
        android:id="@+id/empty"
        android:checkable="false"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/bottom_nav_item4"
        android:icon="@drawable/message_fragment_icon"
        android:title="@string/message_fragment_name" />
    <item
        android:id="@+id/bottom_nav_item5"
        android:icon="@drawable/my_fragment_icon"
        android:title="@string/my_fragment_name" />
</menu>