<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/logout_dialogue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_alert"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_below="@id/logout_dialogue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/dialog_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            style="?borderlessButtonStyle"/>
        <Button
            android:id="@+id/dialog_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            style="?borderlessButtonStyle" />
    </LinearLayout>
</RelativeLayout>