<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_register_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_account_hint">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_register_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="textEmailAddress"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_register_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name_hint">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_register_edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="text"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_register_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_hint"
            app:passwordToggleEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_register_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="textPassword"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_register_input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password_hint"
            app:passwordToggleEnabled="true" >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_register_edit_text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="textPassword"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/activity_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:text="@string/register_button_text"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/activity_register_progress_bar"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_centerInParent="true"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_register_text_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_please_wait"
        android:textColor="@color/black"
        android:layout_alignLeft="@+id/activity_register_progress_bar"
        android:layout_below="@+id/activity_register_progress_bar"
        android:layout_alignStart="@+id/activity_register_progress_bar"
        />

</RelativeLayout>


