<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_share_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/back_arrow"/>
        </com.google.android.material.appbar.AppBarLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_share_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/activity_share_add_button"
                android:orientation="horizontal"
                android:layout_toStartOf="@id/activity_share_add_button"
                android:layout_centerVertical="true"/>
            <ImageButton
                android:id="@+id/activity_share_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/add_button_image_24dp"
                android:background="@color/white"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_share_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toStartOf="@+id/activity_share_counter_tv"
                android:layout_toLeftOf="@+id/activity_share_counter_tv"
                android:background="@color/white"
                android:hint="@string/share_activity_add_title_hint"
                android:maxLength="100"
                android:maxLines="3"
                android:padding="10dp"
                android:scrollHorizontally="true"
                android:textColor="@color/black"
                android:textSize="23sp" />
            <TextView
                android:id="@+id/activity_share_counter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/activity_share_title_edit_text"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/dark_gray_for_text"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_gray"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_share_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:background="@color/white"
                android:hint="@string/share_activity_add_description_hint"/>
        </ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:id="@+id/activity_share_location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_icon"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/activity_share_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/activity_share_location_icon"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_option_text_size"
                android:padding="10dp"
                android:text="@string/share_activity_add_location_text"
                android:layout_toEndOf="@id/activity_share_location_icon" />
            <TextView
                android:id="@+id/activity_share_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="@dimen/setting_option_text_size"
                android:textColor="@color/dark_gray"
                android:text="temp"
                android:layout_toRightOf="@+id/activity_share_location_text"
                android:layout_toEndOf="@+id/activity_share_location_text"
                android:layout_toLeftOf="@id/activity_share_arrow_image"
                android:layout_toStartOf="@id/activity_share_arrow_image" />

            <ImageView
                android:id="@+id/activity_share_arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:src="@drawable/chevron_right"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_gray"/>
        <Button
            android:id="@+id/activity_share_post_button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:text="@string/share_activity_post"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"/>
        <Button
            android:id="@+id/activity_share_save_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button_shape2"
            android:text="@string/share_activity_save_as_draft"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/activity_share_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        style="@style/SpinKitView.Large.Circle"
        app:SpinKit_Color="@color/orange"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_share__text_uploading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/activity_share_progress_bar"
         android:layout_centerHorizontal="true"/>
</RelativeLayout>
